fix visibility

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -12,5 +12,5 @@
 	font-family: 'Inter', 'Arial', sans-serif;
 	opacity: 0;
 	visibility: hidden;
-	transition: opacity 0.5s ease, visibility 0s;
+	transition: opacity 0.5s ease, visibility 0.5s ease;
 }
